--- a/css/02-components/home.css
+++ b/css/02-components/home.css
@@ -7,24 +7,9 @@
 	font-family: var(--ff-barlow-cond);
 	font-weight: var(--fw-regular);
 	color: hsl(var(--clr-blue-light));
+	text-align: center;
 	text-transform: uppercase;
 	letter-spacing: 0.25rem;
-	text-align: center;
-}
-.home__title span {
-	margin-block: 1.25rem;
-	display: block;
-	font-size: 5rem;
-	font-family: var(--ff-bellefair);
-	line-height: 1.1;
-	color: hsl(var(--clr-white));
-	letter-spacing: normal;
-}
-.section__content {
-	font-size: 0.9375rem;
-	line-height: 1.8;
-	text-align: center;
-	color: hsl(var(--clr-blue-light));
 }
 
 @media (width >= 40em) {
@@ -44,13 +29,10 @@
 		background: url("../../img/home/background-home-desktop.jpg") no-repeat center / cover;
 	}
 	.home__title {
-		font-family: 28px;
+		font-size: 1.75rem;
 	}
-	.home__title span {
-		font-size: 144px;
-	}
-	.section__content {
-		font-size: 18px;
+	.title-1 {
+		font-size: 9rem;
 	}
 	.home__title,
 	.section__content {
