--- a/css/01-global/reset.css
+++ b/css/01-global/reset.css
@@ -57,12 +57,76 @@ ul {
 /* 04. Utility Classes=========*/
 .sr-only {
 	position: absolute;
+	overflow: hidden;
+	clip: rect(0, 0, 0, 0);
 	width: 1px;
 	height: 1px;
-	padding: 0;
 	margin: -1px;
-	overflow: hidden;
+	padding: 0;
 	border: 0;
-	clip: rect(0, 0, 0, 0);
 	white-space: nowrap;
+}
+.flex {
+	display: flex;
+}
+.title-1 {
+	margin-block: 20px;
+	display: block;
+	font-size: 80px;
+	letter-spacing: normal;
+}
+.title-2 {
+	font-size: clamp(3.5rem, 2.3636rem + 4.8485vw, 6rem);
+}
+.title-3 {
+	font-size: clamp(1.5rem, 0.5909rem + 3.8788vw, 3.5rem);
+}
+.subtitle {
+	margin-block-end: 1rem;
+	font-size: clamp(1.125rem, 0.7273rem + 1.697vw, 2rem);
+	color: hsl(var(--clr-white) / 0.5);
+}
+.page-title {
+	font-size: clamp(1rem, 0.6591rem + 1.4545vw, 1.75rem);
+	letter-spacing: 2.4px;
+	font-family: var(--ff-barlow-cond);
+	font-weight: var(--fw-regular);
+	text-transform: uppercase;
+	text-align: center;
+}
+.page-title span {
+	padding-inline-end: 24px;
+	color: hsl(var(--clr-white) / 0.5);
+	font-weight: var(--fw-bold);
+}
+.title-1,
+.title-2,
+.title-3,
+.subtitle {
+	line-height: 1.1;
+	color: hsl(var(--clr-white));
+	font-family: var(--ff-bellefair);
+	font-weight: var(--fw-regular);
+	text-transform: uppercase;
+	text-align: center;
+}
+.section__content {
+	font-size: clamp(0.9375rem, 0.8523rem + 0.3636vw, 1.125rem);
+	line-height: 1.8;
+	text-align: center;
+	color: hsl(var(--clr-blue-light));
+}
+
+/* Desktop 1024px */
+@media (width >= 64em) {
+	.title-1,
+	.title-2,
+	.title-3,
+	.subtitle,
+	.page-title {
+		text-align: left;
+	}
+	.page-title {
+		letter-spacing: 4px;
+	}
 }
